Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.10 (TBD)
------------

- Remove old and unused _drivers extension module.
- Check for header.dxf file instead of pcs.csv when looking for installed GDAL
  data. The latter is gone with GDAL 3.0 but the former remains (#818).

1.8.9.post2 (2019-10-22)
------------------------

- The 1.8.9.post1 release introduced a bug affecting builds of the package from
  a source distribution using GDAL 2.x. This bug has been fixed in commit
  960568d.

1.8.9.post1 (2019-10-22)
------------------------

- A change has been made to the package setup script so that the shim module
  for GDAL 3 is used when building the package from a source distribution.
  There are no other changes to the package.

1.8.9 (2019-10-21)
------------------

- A shim module and support for GDAL 3.0 has been added. The package can now be
  built and used with GDAL 3.0 and PROJ 6.1 or 6.2. Note that the 1.8.9 wheels
  we will upload to PyPI will contain GDAL 2.4.2 and PROJ 4.9.3 as in the 1.8.8
  wheels.

1.8.8 (2019-09-25)
------------------

- The schema of geopackage files with a geometry type code of 3000 could not be
  reported using Fiona 1.8.7. This bug is fixed.

1.8.7 (2019-09-24)
------------------

Bug fixes:

- Regression in handling of polygons with M values noted under version 1.8.5
  below was in fact not fixed then (see new report #789), but is fixed in
  version 1.8.7.
- Windows filenames containing "!" are now parsed correctly, fixing issue #742.

Upcoming changes:

- In version 1.9.0, the objects yielded when a Collection is iterated will be
  mutable mappings but will no longer be instances of Python's dict. Version
  1.9 is intended to be backwards compatible with 1.8 except where user code
  tests `isinstance(feature, dict)`. In version 2.0 the new Feature, Geometry,
  and Properties classes will become immutable mappings. See