@@ -1,11 +1,12 @@
 """Shims on top of ogrext for GDAL versions > 2"""
 
+import logging
+import os
+
 from fiona.ogrext2 cimport *
 from fiona._err cimport exc_wrap_pointer
 from fiona._err import cpl_errs, CPLE_BaseError, FionaNullPointerError
 from fiona.errors import DriverError
-
-import logging
 
 
 log = logging.getLogger(__name__)
@@ -42,7 +43,6 @@ cdef void* gdal_open_vector(const char* path_c, int mode, drivers, options) exce
         for name in drivers:
             name_b = name.encode()
             name_c = name_b
-            #log.debug("Trying driver: %s", name)
             drv = GDALGetDriverByName(name_c)
             if drv != NULL:
                 drvs = CSLAddString(drvs, name_c)
@@ -130,3 +130,7 @@ cdef const char* osr_get_name(OGRSpatialReferenceH hSrs):
 
 cdef void osr_set_traditional_axis_mapping_strategy(OGRSpatialReferenceH hSrs):
     OSRFixup(hSrs)
+
+
+cdef void set_proj_search_path(object path):
+    os.environ["PROJ_LIB"] = path
