@@ -6,6 +6,10 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 1.8.10 (TBD)
 ------------
 
+- Use new set_proj_search_path() function to set the PROJ data search path. For
+  GDAL versions before 3.0 this sets the PROJ_LIB environment variable. For
+  GDAL version 3.0 this calls OSRSetPROJSearchPaths(), which overrides
+  PROJ_LIB.
 - Remove old and unused _drivers extension module.
 - Check for header.dxf file instead of pcs.csv when looking for installed GDAL
   data. The latter is gone with GDAL 3.0 but the former remains (#818).
